Make clear search button visible, and fix weird margin in top left corner

--- a/src/ui/layout/layout.scss
+++ b/src/ui/layout/layout.scss
@@ -261,6 +261,9 @@
 
   &__create-button {
     margin-right: $interiorMarginLg;
+    body.mobile & { // Fixes weird gap in mobile status area
+      margin-right: 0px;
+    }
   }
 
   &__indicators {
