--- a/src/ui/layout/search/search.scss
+++ b/src/ui/layout/search/search.scss
@@ -41,8 +41,8 @@
     max-height: 500px;
     z-index: 60;
     body.mobile & {
-      min-width: 90vw;
-      max-height: 90vh;
+      min-width: 95vw;
+      max-height: 95vh;
     }
   }
 
